--- a/static/index.html
+++ b/static/index.html
@@ -5,7 +5,6 @@
     <meta name="viewport" content="width=device-width,initial-scale=1">
     <title>Alex Bushmanov CV</title>
 </head>
-<body>
-<div id="root"></div>
+<body id="root">
 </body>
 </html>
